<resources>
    <string name="app_name">伙伴商城卖家版</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username2">用户名/手机号</string>
    <string name="hint_pwd2">密码</string>
    <string name="hint_pwd">请输入密码(6－12位)</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_data_statistic">DataStatisticActivity</string>
    <string name="title_activity_base_fragment">BaseFragmentActivity</string>

    <string name="back">返回</string>
    <string name="order_statistic">订单统计</string>
    <string name="order_week">本周</string>
    <string name="order_month">本月</string>
    <string name="order_chartTitle">数据分析（本周/本月）</string>
    <string name="order_countOfGoods">商品购买量排列（Top10）</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="sales_statistic">销售额统计（元）</string>
    <string name="sales_week">本周</string>
    <string name="sales_month">本月</string>
    <string name="sales_chartTitle">数据分析（本周/本月）</string>
    <string name="sales_sale_statistic">销售明细</string>

    <string name="members_statistic">注册会员统计（人）</string>
    <string name="members_week">本周</string>
    <string name="members_month">本月</string>
    <string name="member_huoban">小伙伴</string>
    <string name="member_member">会员</string>
    <string name="members_chartTitle">数据分析（本周/本月）</string>
    <string name="members_jf_statistic">返利积分统计</string>
    <string name="members_xf_statistic">消费统计</string>
    <string name="title_activity_goods">GoodsActivity</string>
    <string name="header_edit">编辑</string>
    <string name="title_activity_goods_edit">GoodsEditActivity</string>
    <string name="goodsedit_all">全选</string>
    <string name="goodsedit_delete">删除</string>
    <string name="goodsedit_onshelf">上架</string>
    <string name="goodsedit_offshelf">下架</string>
    <string-array name="main_menu_name">
        <item>产品管理</item>
        <item>订单管理</item>
        <item>更多统计</item>
        <item>设置管理</item>
    </string-array>
    <integer-array name="main_menu_icon">
        <item>@mipmap/cpgl</item>
        <item>@mipmap/ddgl</item>
        <item>@mipmap/gdtj</item>
        <item>@mipmap/szgl</item>
    </integer-array>

    <string name="update_msg">更新内容:</string>
    <string name="onshelf">已上架</string>
    <string name="offshelf">已下架</string>
    <string name="todayNewOrder">今日新增</string>
    <string name="title_activity_more_statistic">MoreStatisticActivity</string>
    <string name="title_activity_edit_set">EditSetActivity</string>
    <string name="title_activity_bill">BillActivity</string>

    <string name="title_activity_sales_detail">SalesDetailActivity</string>

    <string name="title_activity_logistics">LogisticsActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_ordermanagement_details">OrdermanagementDetailsActivity</string>

</resources>
