<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.huotu.huobanmall.seller.activity.GoodsEditActivity">

    <RelativeLayout
        android:id="@+id/goodsedit_header"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <include layout="@layout/layout_goodsedit_header"></include>
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/goodsedit_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/goodsedit_header"
        android:layout_above="@+id/goodsedit_bottom"/>

    <RelativeLayout
        android:id="@+id/goodsedit_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

            <Button
                android:button="@null"
                android:id="@+id/goodsedit_all"
                android:background="@mipmap/wsz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>


        <Button
            android:id="@+id/goodsedit_delete"
            android:text="@string/goodsedit_delete"
            android:layout_toRightOf="@id/goodsedit_all"
            android:background="@drawable/shape_white"
            android:layout_marginLeft="@dimen/space_5"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/goodsedit_onshelf"
            android:text="@string/goodsedit_onshelf"
            android:layout_toRightOf="@id/goodsedit_delete"
            android:background="@drawable/shape_white"
            android:textSize="@dimen/text_size_20"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/space_5"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/goodsedit_offshelf"
            android:text="@string/goodsedit_offshelf"
            android:textSize="@dimen/text_size_20"
            android:layout_toRightOf="@id/goodsedit_onshelf"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/space_5"
            android:layout_marginRight="@dimen/space_5"
            android:background="@drawable/shape_white"

            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
