<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.huobanmall.seller.fragment.MembersFragment">


        <RelativeLayout
            android:id="@+id/members_context"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/members_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20"
                android:text="@string/members_statistic" />

            <LinearLayout
                android:id="@+id/members_summery"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_below= "@id/members_title"
                android:layout_height="@dimen/members_statistic_height">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginRight="1dip"
                    android:background="@color/members_week_bg"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/order_week"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="bottom"
                        android:textColor="@android:color/white"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_18"
                        android:text="@string/members_week"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/member_huoban"
                                android:layout_weight="1"
                                android:textColor="@android:color/white"
                                android:gravity="center"
                                />
                            <TextView
                                android:id="@+id/members_huoban_weekValue"
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:text="789"
                                android:layout_gravity="center"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_size_18"
                                android:layout_height="match_parent" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textColor="@android:color/white"
                                android:gravity="center"
                                android:text="@string/member_member"
                                />
                            <TextView
                                android:id="@+id/members_member_weekValue"
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:text="788"
                                android:layout_gravity="center"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_size_18"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="1dip"
                    android:layout_weight="1"
                    android:background="@color/members_month_bg"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/members_month"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="bottom"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_18"
                        android:text="@string/members_month"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/member_huoban"
                                android:layout_weight="1"
                                android:textColor="@android:color/white"
                                android:gravity="center"
                                />
                            <TextView
                                android:id="@+id/members_member_monthValue"
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:text="8789"
                                android:layout_gravity="center"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_size_18"
                                android:layout_height="match_parent" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textColor="@android:color/white"
                                android:gravity="center"
                                android:text="@string/member_member"
                                />
                            <TextView
                                android:id="@+id/members_member_memberValue"
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:text="8888"
                                android:layout_gravity="center"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_size_18"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/members_lineChart_container"
                android:layout_below="@id/members_summery"
                android:layout_marginTop="@dimen/space_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/members_lineChartTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18"
                    android:text="@string/members_chartTitle"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/members_lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/members_lineChart_height"
                    android:layout_below="@id/members_lineChartTitle"
                    />
            </RelativeLayout>

        <RelativeLayout
            android:id="@+id/members_statistic_container"
            android:layout_below="@id/members_lineChart_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space_5">
            <RelativeLayout
                android:id="@+id/members_statis1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_5"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/space_5">
                <TextView
                    android:text="@string/members_jf_statistic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18"
                    android:layout_toLeftOf="@+id/members_arrow1"/>
                <ImageView
                    android:layout_alignParentRight="true"
                    android:id="@+id/members_arrow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/info_arrow"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/members_statis2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/members_statis1"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/space_5"
                android:layout_margin="@dimen/space_5">
                <TextView
                    android:text="@string/members_xf_statistic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18"
                    android:layout_toLeftOf="@+id/members_arrow2"/>
                <ImageView
                    android:layout_alignParentRight="true"
                    android:id="@+id/members_arrow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/info_arrow"/>

            </RelativeLayout>
        </RelativeLayout>

        </RelativeLayout>


</FrameLayout>
